# aljnu_manipulator

./: README.md
aljnu_manipulator/: CMakeLists.txt  package.xml
aljnump_description/: CMakeLists.txt  package.xml
aljnump_description/config/intelrs/: camera_tf.yaml
aljnump_description/config/sg/: hardware_parameters.yaml
aljnump_description/launch/: hardware_camera.launch.py  hardware_onsga.launch.py  hardware_ur5e.launch.py  move_to_config_action.py  view_ur5e_onsga.launch.py
aljnump_description/rviz/: rvizconfig.rviz
aljnump_description/script/: camera_tf.py  move_to_config_action.py
aljnump_description/urdf/: _generate_ur5e_urdf.sh  aljnu_ur5e_onsga.urdf  aljnu_ur5e_onsga.urdf.xacro
aljnump_description/urdf/ur5e/: ur.urdf.xacro  ur_macro.xacro
aljnump_harvest/: package.xml  setup.cfg  setup.py
aljnump_harvest/aljnump_harvest/: harvest_bridge.py  harvest_perception.py  harvest_playback.py  harvest_run.py  scanzed.py  test.py
aljnump_harvest/launch/: ur_control_airlab.launch.py
aljnump_pnp/: package.xml  setup.cfg  setup.py
aljnump_pnp/aljnump_pnp/: kdl_kinematic.py  pnp_grasp_pose.py  pnp_grasp_yolocentroid.py  pnp_perception.py  pnp_perception_fake.py  pnp_real_run.py
aljnump_pnp/config/: applepnp.yaml  run.yaml
aljnump_pnp/launch/: perception.launch.py  run.launch.py
ur5e_pnp/: setup.cfg  setup.py
ur5e_pnp/config/: applepnp.yaml  camera_tf.yaml  system.yaml
ur5e_pnp/ur5e_pnp/: eyeinhand_tf.py  kdl_kinematic.py  pnp_perception.py  pnp_real_run.py  pnp_real_run_new.py  single_fixed_orientation.py  yolo_centroid.py
