<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aljnu_manipulator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yuth@todo.com">yuth</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>ur_description</exec_depend>

  <exec_depend>onrobotsg</exec_depend> <!-- for pure python package -->
  <exec_depend>onrobotsg_description</exec_depend>
  <exec_depend>onrobotsg_interfaces</exec_depend>

  <exec_depend>aljnump_description</exec_depend>
  <exec_depend>aljnump_pnp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>